white space fix

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -5,7 +5,7 @@
 
 @layer base {
   body {
-    font-family: "Josefin Sans", sans-serif;
+    font-family: "Poppins", sans-serif;
   }
   li {
     @apply px-4;
@@ -14,8 +14,17 @@
   ::-webkit-scrollbar {
     display: none;
   }
-  #nav {
-    font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", monospace;
+  #nav,
+  #num {
+    font-family: "Consolas", monospace;
+  }
+  html,
+  body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
   }
 }
 
